samples/_failures_safe/1761211616_eaffb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d23421b9.c: In function ‘main’:
./samples/SAFE/__tmp_d23421b9.c:158:24: error: missing terminating " character
  158 |     graph_add_node(&g, "B
      |                        ^~
./samples/SAFE/__tmp_d23421b9.c:158:5: error: expected expression at end of input
  158 |     graph_add_node(&g, "B
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d23421b9.c:158:5: error: expected declaration or statement at end of input
